force-app/main/default/objects/SalesOrderLineItem__c/SalesOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Sales Order Line Item</label>
    <nameField>
        <label>Detail ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>