force-app/main/default/objects/SalesOrderLineItem__c/fields/EA_Sales_Order_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Sales_Order_Detail_Id__c</fullName>
    <externalId>true</externalId>
    <label>EA Sales Order Detail Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>