force-app/main/default/objects/SalesOrderLineItem__c/fields/Item_No__c.field-meta.xml
<CustomField>
    <fullName>Item_No__c</fullName>
    <label>Item No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>