force-app/main/default/objects/SalesOrderLineItem__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <label>Serial No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>