force-app/main/default/objects/SalesOrderLineItem__c/fields/UM__c.field-meta.xml
<CustomField>
    <fullName>UM__c</fullName>
    <label>UM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>